<resources>
  <string name="app_name">Pixxo</string>
  <string name="package_name">com.pixxo.breezil.pixxo</string>
  <string name="trending">Trends</string>
  <string name="explore">Explore</string>
  <string name="preference">Settings</string>
  <string name="single_photo">single_photo</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="edited">Edited</string>

  <string name="pref_category_label">Category</string>
  <string name="pref_category_all_value">Nature</string>
  <string name="pref_category_key" translatable="false">category-key</string>

  <string name="pref_category_by_all_value" translatable="false"></string>

  <!--  by-->
  <string name="pref_orderby_key" translatable="false">orderby</string>
  <string name="pref_order_by_label">Order By</string>
  <string name="pref_order_by_all_value" translatable="false"></string>

  <string name="pref_order_by_all" translatable="false">None</string>

  <!-- quick search -->
  <string name="music">music</string>
  <string name="fashion">fashion</string>
  <string name="nature">nature</string>
  <string name="backgrounds">backgrounds</string>
  <string name="science">science</string>
  <string name="education">education</string>
  <string name="people">people</string>
  <string name="feelings">feelings</string>
  <string name="religion">religion</string>
  <string name="health">health</string>
  <string name="places">places</string>
  <string name="animals">animals</string>
  <string name="industry">industry</string>
  <string name="food">food</string>
  <string name="computer">computer</string>
  <string name="sports">sports</string>
  <string name="transportation">transportation</string>
  <string name="travel">travel</string>
  <string name="buildings">buildings</string>
  <string name="business">business</string>


  <string name="color_one">#28E0AE</string>
  <string name="color_two">#45AAF2</string>
  <string name="color_three">#FC5C65</string>
  <string name="color_four">#8854D0</string>
  <string name="color_five">#26DE81</string>
  <string name="color_six">#FED330</string>
  <string name="color_seven">#778CA3</string>
  <string name="color_eight">#00BCD4</string>
  <string name="color_nine">#FF0090</string>
  <string name="color_ten">#FFAE00</string>
  <string name="color_eleven">#28E0AE</string>
  <string name="color_twelve">#45AAF2</string>
  <string name="color_thirteen">#FC5C65</string>
  <string name="color_fourteen">#8854D0</string>
  <string name="color_fifteen">#26DE81</string>
  <string name="color_sixteen">#FED330</string>
  <string name="color_seventeen">#778CA3</string>
  <string name="color_eighteen">#00BCD4</string>
  <string name="color_nineteen">#FF0090</string>
  <string name="color_twenty">#FFAE00</string>


  <!-- quick search -->
  <string name="pref_music">music</string>
  <string name="pref_music_value" translatable="false">music</string>
  <string name="pref_fashion">fashion</string>
  <string name="pref_fashion_value" translatable="false">fashion</string>
  <string name="pref_nature">nature</string>
  <string name="pref_nature_value" translatable="false">nature</string>
  <string name="pref_backgrounds">backgrounds</string>
  <string name="pref_backgrounds_value" translatable="false">backgrounds</string>
  <string name="pref_science">science</string>
  <string name="pref_science_value" translatable="false">science</string>
  <string name="pref_education">education</string>
  <string name="pref_education_value" translatable="false">education</string>
  <string name="pref_people">people</string>
  <string name="pref_people_value" translatable="false">people</string>
  <string name="pref_feelings">feelings</string>
  <string name="pref_feelings_value" translatable="false">feelings</string>
  <string name="pref_religion">religion</string>
  <string name="pref_religion_value" translatable="false">religion</string>
  <string name="pref_health">health</string>
  <string name="pref_health_value" translatable="false">health</string>
  <string name="pref_places">places</string>
  <string name="pref_places_value" translatable="false">places</string>
  <string name="pref_animals">animals</string>
  <string name="pref_animals_value" translatable="false">animals</string>
  <string name="pref_industry">industry</string>
  <string name="pref_industry_value" translatable="false">industry</string>
  <string name="pref_food">food</string>
  <string name="pref_food_value" translatable="false">food</string>
  <string name="pref_computer">computer</string>
  <string name="pref_computer_value" translatable="false">computer</string>
  <string name="pref_sports">sports</string>
  <string name="pref_sports_value" translatable="false">sports</string>
  <string name="pref_transportation">transportation</string>
  <string name="pref_transportation_value" translatable="false">transportation</string>
  <string name="pref_travel">travel</string>
  <string name="pref_travel_value" translatable="false">travel</string>
  <string name="pref_buildings">buildings</string>
  <string name="pref_buildings_value" translatable="false">buildings</string>
  <string name="pref_business">business</string>
  <string name="pref_business_value" translatable="false">business</string>


  <!-- order by-->
  <string name="pref_popular">popular</string>
  <string name="pref_popular_value" translatable="false">popular</string>
  <string name="pref_latest">latest</string>
  <string name="pref_latest_value" translatable="false">latest</string>

  <string name="pref_skin_title">Themes</string>
  <string name="pref_theme_checked_summary">enabled</string>
  <string name="pref_theme_unchecked_summary">disabled</string>

  <string name="pref_theme_key">theme-key</string>

  <string name="pref_theme_true_value">0</string>
  <string name="pref_theme_false_value">1</string>


  <string name="about_description">Pixxo: Explore, Edit and Share Photos.\n\n Pixxo let you explore pictures, edit, write over them and share. Capture a moment and make it beautiful or explore pictures online and make them beautiful with Pixxo and Share with friends and family on your favorite social networks! \n\n Made with love by Kola Emiola and Api by https://pixabay.com </string>


  <string name="contacts">Contact</string>
  <string name="email">kolajubril@gmail.com</string>
  <string name="email_title">Email</string>
  <string name="web">http://www.kolaemiola.xyz/</string>
  <string name="privacy_policy_web">https://sites.google.com/view/pixxo/home</string>
  <string name="website">My Website</string>
  <string name="github">breel93</string>
  <string name="ongithub">github</string>
  <string name="twitter">kola_emi</string>
  <string name="ontwitter">twitter</string>
  <string name="open_source_libs">Open Source Libraries</string>
  <string name="version">Version: 2.0.2</string>
  <string name="copy_right">Copyrights © %1$d</string>
  <string name="widget">Add Widget</string>
  <string name="library_text">Libraries</string>
  <string name="png">.png</string>
  <string name="jpg">.jpg</string>
  <string name="choose_image">Choose Image</string>
  <string name="pixxo">Pixxo</string>
  <string name="pixxo.db">pixxo.db</string>
  <string name="downloading">Downloading</string>
  <string name="please_wait_image_is_downloading">Please wait image is downloading</string>
  <string name="downloaded">Downloaded</string>
  <string name="image_jpg">image/jpg</string>
  <string name="share_image">Share image</string>
  <string name="title">Title</string>
  <string name="Are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="image_deleted">Image Deleted</string>
  <string name="delete_image">Delete Image</string>
  <string name="do_something">Do something</string>
  <string name="some">some</string>
  <string name="saved">Saved</string>
  <string name="delete_all">Delete All</string>
  <string name="saved_list_emptied">Saved list emptied</string>
  <string name="are_you_sure_you_want_to_delete_all_saved">Are you sure you want to delete all saved photos?</string>
  <string name="share_image_">share_image_</string>
  <string name="_slash_pixxo">/Pixxo</string>
  <string name="date_format">yyyyMMdd_HHmmss</string>
  <string name="category">category</string>
  <string name="en">en</string>
  <string name="cookie">Cookie</string>
  <string name="authorization">Authorization</string>
  <string name="okhttp">OkHttp</string>
  <string name="comma">,</string>
  <string name="one">1</string>
  <string name="edit">Edit</string>
  <string name="select_options">Select Options</string>
  <string name="none">none</string>
  <string name="permission_denied">Permission DENIED</string>
  <string name="_provider">.provider</string>
  <string name="jpeg_">JPEG_</string>
  <string name="underscore">_</string>
  <string name="images_slash">image/*</string>
  <string name="get">get</string>
  <string name="blank"></string>
  <string name="random">random</string>
  <string name="two">2</string>
  <string name="about">About</string>
  <string name="save">Save</string>
  <string name="download">Download</string>
  <string name="share">Share</string>
  <string name="gallery">Gallery</string>
  <string name="camera">Camera</string>
  <string name="no_image_edited_yet">No Image edited yet</string>
  <string name="start_editing_images">Start Editing Images</string>
  <string name="delete">Delete</string>
  <string name="no_image_saved_in_collections_yet">No Image saved in collections yet</string>
  <string name="click_to_save_images">Click to Save Images</string>
  <string name="cant_edit_until_image_is_displayed">Can\'t Edit, until image is displayed</string>
  <string name="cant_save_until_image_displayed">Can\'t save, until image is displayed</string>
  <string name="cant_download_until_images_is_loaded">Can\'t Download, Until Image is loaded</string>
  <string name="cant_share_until_image_is_loaded">Can\'t Share, Until Image is Loaded</string>
  <string name="logo">logo</string>
  <string name="ads">ads</string>
  <string name="add_key">ca-app-pub-3940256099942544/6300978111</string>
  <string name="detail">detail</string>
  <string name="settings">Settings</string>
  <string name="no_active_internet">No Active Internet Connection</string>
  <string name="response_error">An error occurred. Check your internet connection or try again.</string>
  <string name="no_result_error">Ops! No result found, try again</string>


</resources>
