<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
      android:id="@+id/fragment_history_menu_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/backgroundcolor"
      android:orientation="horizontal"
      android:padding="@dimen/twentyDP"
      app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
      tools:context=".ui.bottom_sheet.ActionBottomSheetFragment">

    <TextView
        android:id="@+id/select_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twoDP"
        android:layout_weight="@dimen/two"
        android:drawableTop="@mipmap/ic_paint_image"
        android:drawablePadding="@dimen/twoDP"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/select_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twoDP"
        android:layout_weight="@dimen/two"
        android:drawableTop="@mipmap/ic_saved_image"
        android:drawablePadding="@dimen/twoDP"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/select_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twoDP"
        android:layout_weight="@dimen/two"
        android:drawableTop="@mipmap/ic_download_image"
        android:drawablePadding="@dimen/twoDP"
        android:text="@string/download"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/select_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twoDP"
        android:layout_weight="@dimen/two"
        android:drawableTop="@mipmap/ic_share_image"
        android:drawablePadding="@dimen/twoDP"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_weight="@dimen/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/ic_delete"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twoDP"
        android:textAlignment="center"
        android:id="@+id/select_delete"
        android:drawablePadding="@dimen/twoDP"
        android:text="@string/delete"/>
  </LinearLayout>


</layout>